css/article.css
HTML {
  margin: 0;
}

BODY {
  display: flex;
  margin: 0;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  user-select: none;
}

#article-container {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: auto;
  flex-direction: row;
  text-align: center;
  background-color: darkgray;
  height: 100%;
  overflow: auto;
}

#article {
  display: inline-block;
  position: relative;
  margin: 5mm 5mm 5mm 5mm;
  text-align: left;
  /* article is hidden from view initially */
  visibility: hidden;
}

BODY.ready #article {
  visibility: visible;
}

#article-content {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 25mm 25mm 25mm 25mm;
}

#article-text {
  font-size: 12pt;
  text-align: justify;
  white-space: pre-wrap;
}

#article-text H1,
#article-text H2,
#article-text H3,
#article-text H4,
#article-text H5,
#article-text H6 {
  text-align: left;
}

#article-text TABLE {
  display: grid;
  border-collapse: collapse;
  text-align: left;
  font-size: 80%;
  /* page height minus top and bottom margins minus footer margin minus some extra space */
  max-height: calc(297mm - 25mm - 25mm - 5mm - 10mm);
  /* page width minus left and right margins minus some extra space */
  width: calc(210mm - 25mm - 25mm - 2mm);
  margin-left: 1mm;
  overflow: hidden;
}

#article-text TD,
#article-text TH {
  border: 0.5pt solid rgb(0, 0, 0);
  padding: 1pt 1pt 0 1pt;
}

#article-text:focus {
  outline: none;
}

#article-text *:first-child {
  margin-top: 0;
}

#article-text SUP {
  font-size: 10pt;
  font-weight: 400;
}

#article.filter-automatic #article-text .likely-junk {
  display: none;
}

#article.filter-manual #article-text .likely-junk {
  background-color: rgb(255, 102, 102);
}

#article.filter-manual #article-text .possibly-junk {
  animation-name: flashing-background;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  animation-delay: 1s;
}

@keyframes flashing-background {
  0%   { background-color: rgba(255, 255, 102, 0); }
  10%  { background-color: rgba(255, 255, 102, 0.8); }
  40%  { background-color: rgba(255, 255, 102, 0.8); }
  80%  { background-color: rgba(255, 255, 102, 0); }
  100% { background-color: rgba(255, 255, 102, 0); }
}

#article.filter-manual #article-text * {
  cursor: pointer;
}

#article.filter-manual #article-footers {
  opacity: 0.25;
}

#article-footers {
  font-size: 10pt;
}

.footnote-number.hidden {
  display: none;
}

#article-menu {
  position: absolute;
  display: none;
  left: 5px;
  top: 5px;
  background-color: #eeeeee;
  border-radius: 4px;
  box-shadow: 1px 1px 5px black;
  padding: 2px 2px 2px 2px;
}

#article-menu UL {
  font-size: 1.5em;
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#article-menu UL LI {
  padding: 0.2em 0.4em 0.2em 0.4em;
  cursor: pointer;
}

#article-menu UL LI:hover {
  color: #ffffff;
  background-color: #333333;
  border-radius: 4px;
}

.footer-pusher {
  float: right;
  line-height: 0;
  visibility: hidden;
}

.footer-content {
  float: right;
  width: 100%;
  margin-top: 5mm;
  /* page margin top plus margin bottom */
  margin-bottom: calc(25mm + 25mm);
  padding-left: 1.6em;
  white-space: pre-wrap;
}

.footer-content:focus {
  outline-offset: 2px;
}

.footer-spacer {
  float: right;
  width: 100%;
  /* should match margin-top of .paper */
  height: 5mm;
  line-height: 0;
  visibility: hidden;
}

.footer-content:empty {
  /* no margin needed when it's empty */
  margin-top: 0;
  padding-top: 0;
  padding-bottom: 0;
}

#article-footers *:last-child .footer-spacer {
  display: none;
}

.paper {
  width: 210mm;
  height: 297mm;
  /* should match height of .footer-spacer */
  margin-top: 5mm;
  background-color: white;
  box-shadow: 1px 1px 5px black;
}

.paper:first-child {
  margin-top: 0;
}

#status-container {
  display: flex;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  justify-content: center;
  align-items: center;
}

.loader {
  opacity: 0;
  transition: opacity 0.5s ease-in;
}

BODY.pending .loader {
  opacity: 0.5;
}

BODY.error .loader {
  display: none;
}

BODY.ready #status-container {
  display: none;
}

#error-text {
}

@page {
  size: A4 portrait;
  margin: 0;
}

@media print {
  #side-bar {
    /* hide navigation */
    display: none;
  }

  #article-container {
    /* remove background and prevent appear of scroll bar */
    background-color: transparent;
    overflow: visible;
  }

  #article {
    /* remove margin around article */
    margin: 0;
  }

  #article-background {
    /* hidden paper background */
    visibility: hidden;
  }

  .paper {
    /* remove spacing between sheets */
    margin-top: 0;
    /* prevent generation of an blank extra page at the end */
    height: 0;
    box-shadow: none;
  }

  .footer-spacer {
    /* remove spacing between sheets */
    display: none;
  }

  #article.filter-manual #article-text .likely-junk {
    background: none;
  }

  #article.filter-manual #article-text .possibly-junk {
    animation: none;
  }
}

